--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /ReflectionApp/.vs/ReflectionApp
 /ReflectionApp/ReflectionApp/bin/Debug/net8.0
 /ReflectionApp/ReflectionApp/obj
+/ReflectionApp/.vs/ProjectEvaluation
